--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
                                 <select class="form-select" id="modoSelect">
                                     <option value="simple">💬 Chat Simple</option>
                                     <option value="agente">🔍 Agente con Búsqueda Web</option>
+                                    <option value="busqueda_rapida">⚡ Búsqueda Rápida</option>
                                 </select>
                             </div>
                             <div class="col-md-4 mb-3">
