--- a/templates/index.html
+++ b/templates/index.html
@@ -59,11 +59,8 @@
                             <div class="col-md-4 mb-3">
                                 <label class="form-label">Acciones Rápidas:</label>
                                 <div class="d-flex flex-wrap gap-1">
-                                    <button class="btn btn-outline-info btn-sm" onclick="ejemploAgente()">
-                                        <i class="fas fa-play me-1"></i>Demo
-                                    </button>
-                                    <button class="btn btn-outline-success btn-sm" onclick="probarClima()">
-                                        <i class="fas fa-cloud-sun me-1"></i>Clima
+                                    <button class="btn btn-outline-warning btn-sm" onclick="demoGeneral()">
+                                        <i class="fas fa-globe me-1"></i>General
                                     </button>
                                     <button class="btn btn-outline-danger btn-sm" onclick="limpiarChat()">
                                         <i class="fas fa-trash me-1"></i>Limpiar
