ajuste en mensaje

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,9 +86,9 @@
                         </h5>
                     </div>
                     <div class="card-body chat-body" id="chatBody">
-                        <div class="mensaje-sistema">
+                        <div class="mensaje-sistema" id="mensajeBienvenida">
                             <i class="fas fa-info-circle me-2"></i>
-                            ¡Hola! Soy tu asistente de IA con Llama3. Puedo responder preguntas básicas o usar búsqueda web para información actual.
+                            <span id="textoBienvenida">¡Hola! Soy tu asistente de IA. Puedo responder preguntas básicas o usar búsqueda web para información actual.</span>
                         </div>
                     </div>
                     <div class="card-footer">
