--- a/templates/index.html
+++ b/templates/index.html
@@ -63,14 +63,23 @@
                                 </select>
                             </div>
                             <div class="col-md-4 mb-3">
-                                <label class="form-label">Acciones Rápidas:</label>
-                                <div class="d-flex flex-wrap gap-1">
-                                    <button class="btn btn-outline-warning btn-sm" onclick="demoGeneral()">
-                                        <i class="fas fa-globe me-1"></i>General
-                                    </button>
-                                    <button class="btn btn-outline-danger btn-sm" onclick="limpiarChat()">
-                                        <i class="fas fa-trash me-1"></i>Limpiar
-                                    </button>
+                                <label class="form-label">Configuración:</label>
+                                <div class="d-flex flex-column gap-2">
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" id="permitirInternet" checked>
+                                        <label class="form-check-label" for="permitirInternet">
+                                            <i class="fas fa-wifi me-1"></i>
+                                            <span id="labelInternet">Permitir búsqueda web</span>
+                                        </label>
+                                    </div>
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-warning btn-sm" onclick="demoGeneral()">
+                                            <i class="fas fa-globe me-1"></i>Demo
+                                        </button>
+                                        <button class="btn btn-outline-danger btn-sm" onclick="limpiarChat()">
+                                            <i class="fas fa-trash me-1"></i>Limpiar
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
