ajuste en clima

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,9 @@
                                         <span id="estadoWebTexto">Web habilitada - Puede buscar información actual</span>
                                     </div>
                                     <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-info btn-sm" onclick="consultarClimaRapido()">
+                                            <i class="fas fa-cloud-sun me-1"></i>Clima
+                                        </button>
                                         <button class="btn btn-outline-warning btn-sm" onclick="demoGeneral()">
                                             <i class="fas fa-globe me-1"></i>Demo
                                         </button>
